--- a/9-to-5.ipynb
+++ b/9-to-5.ipynb
@@ -51,7 +51,9 @@
             "cell_type": "markdown",
             "metadata": {},
             "source": [
-                "![Database Diagram](data_exploration photo.jpg)"
+                "![Database Diagram](data_exploration photo.jpg)\n",
+                "The diagram/photo for 'Database Exploration' is displayed above. \n",
+                "The original file is in the same folder, named 'data_exploration_photo.jpg'. Thanks."
             ]
         },
         {
